Closed Bug 1727762 Opened 4 years ago Closed 4 years ago

Compile error in ProfilerThreadRegistrationData.h: expected identifier / comparison between pointer and integer

Categories

(Core :: Gecko Profiler, defect, P1)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: rmader, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Since bug 1722261 I get a compile error when compiling locally - even after multiple mach clobber and mach boostrap runs. Reverting bug 1722261 works around the issue.

This is my mozconfig:

ac_add_options --enable-debug
ac_add_options --disable-tests
ac_add_options --with-ccache=sccache 
ac_add_options --with-ccache=$HOME/.mozbuild/sccache/sccache

The error is:

39:15.35 In file included from Unified_cpp_layout_forms0.cpp:11:
39:15.35 In file included from /home/robert/firefox/gecko-dev/layout/forms/nsCheckboxRadioFrame.cpp:11:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/HTMLInputElement.h:19:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/Promise.h:22:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/AutoEntryScript.h:16:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerLabels.h:14:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadState.h:14:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadRegistration.h:11:
39:15.35 /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadRegistrationData.h:160:5: error: expected identifier
39:15.35     ACTIVE = 2,
39:15.35     ^
39:15.35 /home/robert/firefox/gecko-dev/layout/forms/nsButtonFrameRenderer.cpp:25:16: note: expanded from macro 'ACTIVE'
39:15.35 #define ACTIVE "active"
39:15.35                ^
39:15.35 In file included from Unified_cpp_layout_forms0.cpp:11:
39:15.35 In file included from /home/robert/firefox/gecko-dev/layout/forms/nsCheckboxRadioFrame.cpp:11:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/HTMLInputElement.h:19:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/Promise.h:22:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/AutoEntryScript.h:16:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerLabels.h:14:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadState.h:14:
39:15.35 In file included from /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadRegistration.h:11:
39:15.35 /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadRegistrationData.h:432:36: error: comparison between pointer and integer ('enum (anonymous enum at /home/robert/firefox/gecko-dev/obj-x86_64-pc-linux-gnu/dist/include/mozilla/ProfilerThreadRegistrationData.h:157:3)' and 'const char *')
39:15.35     MOZ_RELEASE_ASSERT(mJSSampling == ACTIVE ||
Summary: Compile error in ProfilerThreadRegistrationData.h: comparison between pointer and integer → Compile error in ProfilerThreadRegistrationData.h: expected identifier / comparison between pointer and integer

Thanks for the report. I was able to reproduce it.
As I guessed from your log, this #define ACTIVE must be affecting #includes in a later file, due to the unified build.
This group of #defines looks obsolete anyway, dating from 1999, but not used in this file anymore! I'll remove them.

Assignee: nobody → gsquelart
Severity: -- → S4
Priority: -- → P1
Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/785194c6badc Fix profiler build issue by removing obsolete macros in nsButtonFrameRenderer.cpp - r=mstange

Thanks for the quick reaction!

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

Set release status flags based on info from the regressing bug 1722261

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: