Bug 1727762 - Fix profiler build issue by removing obsolete macros in nsButtonFrameRenderer.cpp - r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D123772